# gardenops

./: .env.example  .env.test.example  .gitignore  CONTRIBUTING.md  ENVIRONMENT_VARIABLES.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
deploy/: gardenops-atomic-deploy  gardenops-atomic-release.conf.example  gardenops-release-preflight  gardenops.service.example  nginx.example.conf  nginx.production.example.conf
docs/: README.md  ai-provider-plan.md  configuration.md  dependency-security-policy.md  deployment.md  development.md  installation.md  map-objects.md  postgres-test-speed-plan.md  pr-review-runbook.md  shademap.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
gardenops/: admin_edge_policy.py  audit.py  branding.py  constants.py  db.py  e2e_fixture.py  events.py  feature_gates.py  incident_controls.py  main.py  migrations.py  models.py  observability.py  offline_idempotency.py  parsing.py  passkeys.py  performance_queries.py  platform_secrets.py  provider_settings.py  public_ids.py  rate_limit.py  redaction.py  request_body.py  router_helpers.py  schema_signature.py  security.py  security_metrics.py  security_mfa.py  security_telemetry.py  sql_dates.py
migrations/: 0001_initial.sql  0002_public_resource_ids.sql  0003_secondary_public_ids.sql  0004_calendar_phase1.sql  0005_calendar_plant_filters.sql  0006_calendar_area_filters.sql  0007_calendar_manual_events.sql  0008_calendar_manual_event_plants.sql  0009_task_windows.sql  0010_control_plane_public_ids.sql  0011_notification_preferences_lifecycle.sql  0012_gardens_owner_user_restrict.sql  0013_plot_garden_layout_enforcement.sql  0014_platform_provider_secrets.sql  0015_auth_passkeys.sql  0016_secure_passkey_onboarding.sql  0017_invitation_passkey_challenge_handle.sql  0018_map_objects_nested_layouts.sql  0019_attention_model.sql  0020_attention_preferences_metadata.sql  0021_weather_alert_identity.sql  0022_offline_operation_idempotency.sql  0023_audit_request_id.sql  0024_audit_request_correlation_index.sql  0025_task_revision_and_fertilize_windows.sql  0026_media_cleanup_jobs.sql  0027_inventory_procurement_integrity.sql  0028_auth_session_device_metadata.sql
scripts/: capture_page_performance_measurements.py  check_ai_chat_client_contract.cjs  check_attention_e2e_db_safety.py  check_attention_today_contract.cjs  check_attention_today_e2e.cjs  check_auth_gate_status_flow.cjs  check_backend_integrity.py  check_backend_performance.cjs  check_complete_journeys_e2e.cjs  check_dependency_sources.py  check_deterministic_provider_e2e.cjs  check_env_docs.py  check_frontend_dist_assets.cjs  check_github_action_pins.py  check_innerhtml_sinks.py  check_invite_token_hash_only.cjs  check_journey_coverage.py  check_map_object_direct_manipulation_e2e.cjs  check_map_object_editor_contract.cjs  check_no_sourcemaps.cjs  check_npm_release_age.cjs  check_optimization_journeys_e2e.cjs  check_page_performance.cjs  check_performance_budgets.py  check_phase_nine_query_plans.py  check_python_release_age.py  check_task_completion_history_e2e.cjs  check_task_snooze_policy_contract.cjs  check_totp_mfa_e2e.cjs  check_ui_flow_map_e2e.cjs  generate_security_release_bypass.py  git_push_sanitizer.py  run_attention_today_e2e.sh  run_backend_shards.py  run_backend_smoke.sh  run_complete_journeys_e2e.sh  run_deterministic_provider_e2e.sh  run_fast_postgres_tests.py  run_optimization_journeys_e2e.sh  run_task_completion_history_e2e.sh  (+11 more)
tests/: accessibility_expectations.yaml  base.py  conftest.py  journey_coverage.yaml  performance_budgets.yaml  test_admin_edge_policy.py  test_ai_provider.py  test_atomic_deploy_scripts.py  test_attention_api.py  test_attention_service_unit.py  (+102 more)
(+204 files in other folders)
