[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gardenops"
version = "0.1.1"
requires-python = ">=3.14,<3.15"
dependencies = [
    "argon2-cffi>=25.1.0",
    "anthropic>=0.102.0",
    "cryptography>=46.0.5",
    "fastapi==0.136.1",
    "laspy[lazrs]>=2.7.0",
    "numpy>=2.4.2",
    "openai>=2.38.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pyproj>=3.7.2",
    "PyYAML>=6.0.3",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]==0.47.0",
    "redis>=7.4.0",
    "psycopg-pool>=3.3.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
]
lint = [
    "ruff>=0.15.14",
    "ty>=0.0.1",
]
audit = [
    "pip-audit==2.9.0",
    "requests<2.34.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short -x --strict-markers --strict-config"

[tool.hatch.build.targets.wheel]
packages = ["gardenops"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.rules]
invalid-argument-type = "warn"
no-matching-overload = "warn"
not-subscriptable = "warn"
invalid-assignment = "warn"
unresolved-attribute = "warn"
invalid-return-type = "warn"
