[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gardenops"
version = "0.1.1"
requires-python = ">=3.14,<3.15"
dependencies = [
    "argon2-cffi>=25.1.0",
    "anthropic>=0.117.0",
    "cryptography>=49.0.0,<50.0.0",
    "fastapi==0.139.2",
    "laspy[lazrs]>=2.7.0",
    "numpy>=2.4.2",
    "openai>=2.44.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pyproj>=3.7.2",
    "PyYAML>=6.0.3",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]==0.51.0",
    "redis>=8.0.1",
    "psycopg-pool>=3.3.0",
    "webauthn==3.0.0",
    "cbor2==6.1.3",
]

[dependency-groups]
test = [
    "pytest>=9.1.1",
    "pytest-xdist>=3.8.0",
]
lint = [
    "ruff>=0.15.14",
    "ty>=0.0.51,<0.0.52",
]
audit = [
    "pip==26.1.2",
    "pip-audit==2.10.1",
    "msgpack>=1.2.1",
    "requests<2.35.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short -x --strict-markers --strict-config"

[tool.hatch.build.targets.wheel]
packages = ["gardenops"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.rules]
invalid-argument-type = "warn"
no-matching-overload = "warn"
not-subscriptable = "warn"
invalid-assignment = "warn"
unresolved-attribute = "warn"
invalid-return-type = "warn"
